2016-01-25  Charlie Zender  <zender@uci.edu>

	* ncremap correctly handle simultaneous -O drc_out -o fl_out switches

	* Notate oft-need antlr post-processing perl script command

2016-01-24  Charlie Zender  <zender@uci.edu>

	* Implement "cheesy" patch that inverts CW quadrilaterals to make them CCW so Tempest can read them
	Patch succeeds in making all grids CCW (according to NCO) though Tempest occasionally disagrees

2016-01-24  Henry Butowsky  <henryb@hush.com>

	* ncap2 first cut to grammar file of code for hyperslabbing attributes on LHS and RHS

	* First version of push() method for attributes

2016-01-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Versqion 4.5.5-alpha04 final changes';git push
	git tag -a 4.5.5-alpha04 -m 'Version 4.5.5-alpha04 new features: ncremap -j job_nbr';git push --tags

	* Add parallelism tuning with ncremap -j job_nbr where job_nbr is number of simultaneous jobs

	* Fix double eval() in ncremap

	* Adopt MPI per-node parallelization nearly in toto from climo_nco.sh to ncremap

2016-01-17  Charlie Zender  <zender@uci.edu>

	* Implement nco_ccw_chk()

	* Implement Bit Shave and Bit Set algorithms (for comparison with Bit Groom): ncks --baa=[0,1,2]

2016-01-16  Charlie Zender  <zender@uci.edu>

	* Update ncremap environment (e.g., DATA, NCO PATH, netCDF LD_LIBRARY_PATH) on HPCs and tidy output

2016-01-15  Charlie Zender  <zender@uci.edu>

	* Warn if packed in nco_grd_nfr() and nco_rgr_map() for input coordinate and variable, respectively

	* Deep-free NC_STRING var_sct in nco_var_free() for ncap2 only

	* NCO 4.5.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Versqion 4.5.5-alpha03 final changes';git push
	git tag -a 4.5.5-alpha03 -m 'Version 4.5.5-alpha03 new features: ncremap -P airs,mpas';git push --tags

	* ncpdq: Eliminate duplicate file-header set-up that causes --gaa option to fail second-time

	* ncremap: Add -P pdq_typ option for AIRS and MPAS data
